Fix WebGL glitter on Safari (finally!)

--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -128,6 +128,7 @@ li{
   width:100%;
   height:100%;
   pointer-events:none;
+  filter:invert(1);
 }
 
 .headerText{
